@@ -14,25 +14,18 @@ KEYWORDS="alpha amd64 arm hppa ia64 ppc ppc64 sparc x86"
 IUSE="gammu"
 
 RDEPEND="dev-python/pygtk
-	 dev-python/pybluez
- 	 dev-python/pyserial
-	 app-mobilephone/obexftp
-	 gammu? ( dev-python/python-gammu )"
+     dev-python/pybluez
+     dev-python/pyserial
+     app-mobilephone/obex-data-server
+     gammu? ( dev-python/python-gammu )"
 DEPEND="${RDEPEND}"
 
-pkg_setup() {
-	if ! built_with_use app-mobilephone/obexftp python ; then
-		eerror "app-mobilephone/obexftp has to be compiled with USE=python"
-		die "Needed USE-flag for obexftp not found."
-	fi
-}
-
 src_compile() {
-	econf
-	emake || die "emake failed."
+    econf
+    emake || die "emake failed."
 }
 
 src_install() {
-	emake DESTDIR="${D}" install || die "emake install failed."
-	dodoc AUTHORS ChangeLog README TODO
+    emake DESTDIR="${D}" install || die "emake install failed."
+    dodoc AUTHORS ChangeLog README TODO
 }
